# impl-trait-for-tuples

./: Cargo.toml  README.md
src/: full_automatic.rs  lib.rs  semi_automatic.rs  utils.rs
tests/: codegen.rs  ui.rs
tests/fail/: custom_trait_bound_invalid.rs  custom_trait_bound_invalid.stderr  trait_bound_not_added.stderr  tuple_impls_less_than_minimum_does_not_exists.stderr
tests/ui/: calling_method_in_static_function.rs  custom_where_clause_not_allowed.stderr  empty_for_tuples.rs  empty_for_tuples.stderr  max_before_min_in_arguments.stderr  missing_arguments_to_macro.stderr  missing_paren_in_for_tuples.rs  no_const_value.rs  no_const_value.stderr  no_default_implementation.rs  no_default_implementation.stderr  no_return_value.rs  no_return_value.stderr  no_type_parameter.rs  no_type_parameter.stderr  too_much_arguments_to_macro.stderr
