[package]
name = "impl-trait-for-tuple"
version = "0.1.0"
authors = ["Bastian Köcher <git@kchr.de>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.5", features = [ "full", "visit", "fold", "extra-traits" ] }
quote = "1.0.2"
proc-macro2 = "1.0.2"

[dev-dependencies]
trybuild = "1.0.11"
